feature: migrate retry and dlq failure contracts to avro
- Updated failure publishing to send generated Avro FailedEvent records
- Migrated retry consumer to consume Avro FailedEvent messages
- Preserved aggregate-based partitioning for retry and DLQ topics
- Stored full original event envelope for retry recovery
- Replayed failed events through the shared processing coordinator
- Retained manual acknowledgement behavior for Avro retry processing
- Removed `FlightOperationEventMapper` as its functionality was no longer required. All mappings have moved to Avro contracts.
- Refactored and centralized idempotency claim release logic during failure routing.
- Fixed minor inconsistencies in Kafka producer and consumer configurations.
- Completed Avro cutover across ingestion, retry, and DLQ event flows